biology/rubygem-bio-executables: right...

--- a/biology/rubygem-bio-executables/Makefile
+++ b/biology/rubygem-bio-executables/Makefile
@@ -7,7 +7,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Collection of miscellaneous utilities for bioinformatics
 WWW=		https://github.com/bioruby/bioruby-executables
 
-LICENSE=	bsd2 rubvy
+LICENSE=	bsd2 ruby
 LICENSE_COMB=	dual
 LICENSE_FILE_bsd2=${WRKSRC}/BSDL
 LICENSE_FILE_ruby=	${WRKSRC}/COPYING
